feat(thesis): WIP thesis

--- a/docs/thesis/bibliografia.bib
+++ b/docs/thesis/bibliografia.bib
@@ -231,3 +231,8 @@
   title        = {Strona internetowa biblioteki do automatyzacji przeglądarek internetowych do celów testowych - Selenium},
   howpublished = {Dostęp zdalny (22.12.2023): \url{https://www.selenium.dev}}
 }
+
+@misc{docker,
+  title        = {Strona internetowa narzędzia do konteneryzacji - Docker},
+  howpublished = {Dostęp zdalny (28.12.2023): \url{https://www.docker.com}}
+}
